Added a response for when its a tie

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
         <a name="guesserQUESTION2OPTIONSfirstORsecondORthirdORfourthORfifth"></a>
 
         <p>Carry on...</p>
+
+        <a name="guesserQUESTION3OPTIONSobamaORtrump"></a>
     </article>
 
     <script src="index.js"></script>
