Changed the thumbnail video

--- a/public/thumbnail/index.html
+++ b/public/thumbnail/index.html
@@ -27,9 +27,7 @@
 
 <body>
   <a id="link">
-    <video muted autoplay loop preload playsinline src="./composite.mp4" width="400" height="300"></video>
-    <!-- <video muted autoplay loop preload playsinline src="./blue-red.mp4" width="400" height="300"></video> -->
-    <!-- <video muted autoplay loop preload playsinline src="./obama-trump.mp4" width="400" height="300"></video> -->
+    <video muted autoplay loop preload playsinline src="./mayputinls.mp4" width="400" height="300"></video>
   </a>
   <script>
     (function (linkParamURLDelimiter, locationURL) {
